add feature about endless terrain

--- a/.gitignore
+++ b/.gitignore
@@ -731,3 +731,4 @@ healthchecksdb
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
 *.code-workspace
+*.csproj
